# server/src/swagger-gen.js
@@ -1,14 +1,14 @@
-const swaggerAutogen = require('swagger-autogen')();
+const swaggerAutogen = require("swagger-autogen")();
 
 const doc = {
   info: {
-    title: 'My API',
-    description: 'Description',
+    title: "My API",
+    description: "Description",
   },
-  host: 'localhost:5000',
-  schemes: ['http'],
+  host: "localhost:5000",
+  schemes: ["http"],
 };
 
-const outputFile = './swagger.json';
-const endpointsFiles = ['./index.js'];
+const outputFile = "./swagger.json";
+const endpointsFiles = ["./index.js"];
 swaggerAutogen(outputFile, endpointsFiles, doc);
